style: Fix unreadable button text colors because of bulma update
* Also changes pagination background color to `$background` (dark color)
* Also adds top margin top "Results" pagination

--- a/src/assets/bulma.scss
+++ b/src/assets/bulma.scss
@@ -3,7 +3,7 @@
 
 // Pagination
 .pagination-link, .pagination-next, .pagination-previous {
-  background-color: white;
+  background-color: $background;
 }
 nav.pagination > a[role=button] {
   display: none;
